[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezscale-virtfusion"
dynamic = ["version"]
description = "Python SDK for the VirtFusion API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EZScale" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1.5"]

[project.urls]
Repository = "https://github.com/EZSCALE/virtfusion-python"

[tool.hatch.build.targets.wheel]
packages = ["src/virtfusion"]

[tool.hatch.version]
path = "src/virtfusion/_version.py"

[tool.mypy]
strict = true
